--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -8,23 +8,10 @@ RUN apt-get update && apt-get install -y \
     libonig-dev \
     libxml2-dev \
     zip unzip curl git npm \
-    && docker-php-ext-install pdo mbstring exif pcntl bcmath gd
+    && docker-php-ext-install pdo pdo_mysql mbstring exif pcntl bcmath gd
 
-# COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www
 
-# COPY app/test-react/composer.json app/test-react/composer.lock ./
-
-# RUN composer install --no-dev --optimize-autoloader --no-scripts
-
-COPY app/test-react ./
-
-# RUN npm install
-# RUN npm run build
-
 RUN chown -R www-data:www-data /var/www
-
-# EXPOSE 8000
-
-# CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
