--- a/app/app/package.json
+++ b/app/app/package.json
@@ -6,7 +6,7 @@
         "build": "vite build",
         "dev": "vite"
     },
-    "devDependencies": {
+    "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
